tests/parser/command_form/invalid_03.m.out
In invalid_03.m, line 5
|     foo + kitten; % semantic error (foo is function and missing input)
|         ^ error: expected NEWLINE, found OPERATOR instead
MISS_HIT Summary: 1 file(s) analysed, 1 error(s)
